--- a/packages/front-end/styles/theme.scss
+++ b/packages/front-end/styles/theme.scss
@@ -106,6 +106,9 @@
   --header-revision-log: #ebe4ff;
 
   --callout-grey: #e8e8e8;
+
+  --radio-button-fill: #6e56cf;
+  --file-picker-browse: #{colors.$gray-600};
 }
 
 @mixin dark-theme {
@@ -217,6 +220,9 @@
   --header-revision-log: #33255b;
 
   --callout-grey: #2a2a2a;
+
+  --radio-button-fill: #6e56cf;
+  --file-picker-browse: #{colors.$gray-400};
 }
 
 .theme--light,
